# llm-council

./: .gitignore  LICENSE  README.md  council.ipynb  pyproject.toml
