[project]
name = "llm-council"
version = "0.1.0"
description = "LangGraph-based LLM council demo (Karpathy-inspired)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.3.18",
  "langchain-openai>=0.3.9",
  "gradio>=5.22.0",
  "python-dotenv>=1.0.1",
  "ipython>=8.0.0",
  "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
]

